# lr_gym

./: .gcc-flags.json  .gitignore  CMakeLists.txt  README.md  install_helper.sh  install_helper_dev.sh  requirements.txt
config/: cartpole_v0_velocity.yaml
demo_gazebo/: CMakeLists.txt  package.xml  requirements.txt  setup.py
demo_gazebo/launch/: cartpole_gazebo_sim.launch  cartpole_gazebo_sim_plugin.launch  fixed_camera_gazebo_sim.launch  hopper_gazebo_sim.launch
demo_gazebo/models/: cartpole_v0.urdf  cube.urdf.xacro  hopper.urdf  hopper.xml  hopper_v0.sdf  hopper_v0.urdf  hopper_v0.urdf.xacro
demo_gazebo/scripts/: BaseEnv.py  BaseGazeboEnv.py  CartpoleEnv.py  CartpoleEnvNoPlugin.py  CartpoleGazeboEnv.py  CartpoleGazeboEnvNoPlugin.py  GazeboController.py  GazeboControllerNoPlugin.py  HopperEnv.py  HopperGazeboEnv.py  PyBulletController.py  PyBulletUtils.py  SimulatorController.py  hopperPyBullet.py  solve_cartpole.py  solve_dqn_stable_baselines.py  solve_hopper.py  test_cartpole_env.py  test_cartpole_env_noPlugin.py  test_cartpole_env_pybullet.py  test_hopper.py  utils.py
demo_gazebo/worlds/: cartpole_world_plugin.world  fixed_camera_world.world  fixed_camera_world_plugin.world
gazebo_gym/: CMakeLists.txt  build_virtualenv.sh  build_virtualenv_sb.sh  package.xml  requirements.txt  requirements_sb.txt  requirements_sb3.txt  requirements_sb_cpu.txt  requirements_tfa.txt  setup.py
gazebo_gym/config/: rosconsole_warn.config
gazebo_gym/launch/: cartpole_gazebo_sim.launch  fixed_camera_gazebo_sim.launch  gazebo_server.launch  hopper_gazebo_sim.launch  launch_panda.launch  launch_panda_cartesian_position_gazebo_sim.launch  launch_panda_effort_d435i_gazebo_sim.launch  launch_panda_effort_d435i_moveit_sim.launch  launch_panda_effort_gazebo_sim.launch  launch_panda_effort_moveit_sim.launch  launch_panda_moveit.launch  panda_moveit_pick.launch  tmp.launch
gazebo_gym/models/: cube.urdf  hopper.sdf  hopper_v0.urdf.xacro  panda_arm_d435i.srdf.xacro  panda_clipper_d435i.srdf.xacro  panda_clipper_d435i.urdf.xacro  panda_d435i.srdf.xacro  panda_d435i.urdf.xacro
gazebo_gym/worlds/: fixed_camera_world.world  fixed_camera_world_plugin.world  ground_plane_world_mu05.world  ground_plane_world_plugin.world
gazebo_gym_env_plugin/: CMakeLists.txt  package.xml
gazebo_gym_env_plugin/action/: GetJointsInfo.action
gazebo_gym_env_plugin/launch/: empty_world_gdb.launch  fallingCubeWorld.launch  fallingCubeWorld_gdb.launch
gazebo_gym_env_plugin/msg/: JointEffortRequest.msg  JointId.msg  JointInfo.msg  JointInfoArray.msg  JointsInfoResponse.msg  LinkId.msg  LinkInfo.msg  LinksInfoResponse.msg  RenderedCameras.msg
gazebo_gym_env_plugin/scripts/: launchGazebo.sh  save_render.py
gazebo_gym_env_plugin/src/: JointEffortControl.cpp  JointEffortControl.hpp  RenderingHelper.cpp  RenderingHelper.hpp  gazeboGymEnvPlugin.cpp  utils.cpp  utils.hpp
gazebo_gym_env_plugin/srv/: GetInfo.srv  RenderCameras.srv  StepSimulation.srv
gazebo_gym_env_plugin/worlds/: empty.world  fallingCube.world
gazebo_gym_helpers/: CMakeLists.txt  package.xml
gazebo_gym_helpers/action/: MoveToEePose.action
gazebo_gym_helpers/msg/: LinkPoses.msg  LinkStates.msg
gazebo_gym_helpers/scripts/: testPython3.py
gazebo_gym_helpers/src/: link_state_publisher.cpp  move_helper.cpp
gazebo_gym_helpers/srv/: GetEePose.srv  GetJointState.srv
gazebo_gym_utils/: CMakeLists.txt  gazebo_gym_utils_plugin.xml  package.xml  setup.py
gazebo_gym_utils/config/: ros_controllers.yaml
gazebo_gym_utils/include/: CartesianPositionController.hpp  ForwardKinematicsComputer.hpp  GravityCompensatedEffortController.hpp  KdlHelper.hpp  LinkStatePublisherController.hpp
gazebo_gym_utils/scripts/: launchGazebo.py  simpleGripperActionServer.py  testPython3.py
gazebo_gym_utils/src/: CartesianPositionController.cpp  ForwardKinematicsComputer.cpp  GravityCompensatedEffortController.cpp  KdlHelper.cpp  LinkStatePublisherController.cpp  link_pose_publisher.cpp  link_state_publisher.cpp  move_helper.cpp
gazebo_gym_utils/src/gazebo_gym_utils/: ros_launch_utils.py
launch/: cartpole_gazebo_sim.launch
lr_gym/: CMakeLists.txt  build_virtualenv.sh  package.xml  requirements_sb.txt  requirements_sb3.txt  setup.py
lr_gym/launch/: cartpole_gazebo_sim.launch  fixed_camera_gazebo_sim.launch  gazebo_client.launch  gazebo_server.launch  hopper_gazebo_sim.launch  launch_panda.launch  launch_panda_cartesian_position_gazebo_sim.launch  launch_panda_effort_d435i_gazebo_sim.launch  launch_panda_effort_d435i_moveit_sim.launch  launch_panda_moveit.launch  panda_moveit_pick.launch
lr_gym/models/: camera.urdf.xacro  cartpole_v0.sdf.xacro  cartpole_v0.urdf.xacro  generic_cube.urdf.xacro  generic_cube.xacro  green_cube.urdf  hopper_v0.urdf.xacro  hopper_v1.urdf.xacro  panda_d435i.srdf.xacro  panda_d435i.urdf.xacro  red_cube.urdf
lr_gym/src/lr_gym/utils/: beep.py  (+6 more)
lr_gym/worlds/: fixed_camera_world.world  fixed_camera_world_plugin.world  ground_plane_world_mu05.world  ground_plane_world_plugin.world
lr_gym_utils/: CMakeLists.txt  lr_gym_utils_plugin.xml  package.xml  setup.py
lr_gym_utils/action/: MoveToEePose.action  MoveToJointPose.action
lr_gym_utils/config/: ros_controllers.yaml
lr_gym_utils/include/: CartesianPositionController.hpp  ForwardKinematicsComputer.hpp  GravityCompensatedEffortController.hpp  KdlHelper.hpp  LinkStatePublisherController.hpp
lr_gym_utils/msg/: LinkState.msg  LinkStates.msg
lr_gym_utils/scripts/: simpleGripperActionServer.py  testPython3.py  testRosMultiProc.py
lr_gym_utils/src/: CartesianPositionController.cpp  ForwardKinematicsComputer.cpp  GravityCompensatedEffortController.cpp  KdlHelper.cpp  LinkStatePublisherController.cpp  link_pose_publisher.cpp  link_state_publisher.cpp  move_helper.cpp
lr_gym_utils/srv/: AddCollisionBox.srv  ClearCollisionObjects.srv
moveit_helper/: CMakeLists.txt  package.xml
moveit_helper/action/: MoveToJointPose.action
scripts/: CartpoleGazeboEnv.py  GazeboController.py  gazeboControlTest.py  solve_dqn_stable_baselines.py  test_cartpole_env.py
worlds/: cartpole_world.world
(+219 files in other folders)
