<?xml version="1.0"?>
<package format="2">
  <name>gazebo_gym_env_plugin</name>
  <version>0.0.1</version>
  <description>
    Gazebo plugin that provides an OpenAI-Gym-like interface for Gazebo, through ROS services
  </description>
  <maintainer email="cr.git.mail@gmail.com">Carlo Rizzardo</maintainer>
  <license>TODO</license>
  <author>Carlo Rizzardo</author>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <!--
    Need to use gazebo_dev since run script needs pkg-config
    See: https://github.com/ros-simulation/gazebo_ros_pkgs/issues/323 for more info
  -->
  <exec_depend>gazebo_dev</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

</package>
